# Blackstar_FootSwitch

./: .bash_history  .gitmodules  README.md  env_setup.sh  flows_raspberrypi.json  package-lock.json  package.json
.node-red/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .flows_raspberrypi.json.backup  flows_raspberrypi.json  flows_raspberrypi_cred.json  package-lock.json  package.json  settings.js
Foot_Switch/: Oled.py  Tft.py  blackstarid.py  foot_switch.py  patch.json  patch.json.old
Foot_Switch/Patches/: Clean_Cool.json  Metal_OD1.json  Metal_low.json  Punk.json
Foot_Switch/json/: current_ctrl.json  default.json  patch.json
Foot_Switch/node-red/: .config.nodes.json  .config.runtime.json  .config.users.json
Foot_switch_libusb_c/: CMakeLists.txt
Foot_switch_libusb_c/inc/: blackstar.h
Foot_switch_libusb_c/src/: CMakeLists.txt  blackstar.c  blackstar_def.c  main.c
blackstarid/: blackstarid.py
node-red/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .flows.json.backup  flows.json  package-lock.json  package.json
